[package]
name = "coerce-cqrs"
description = "CQRS structure over coerce-rs persistent actor framework."
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dmrolfs/coerce-cqrs-rs"
keywords = ["actor", "cqrs", "events", "event_sourced"]
categories = ["actor", "event", "cqrs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { version = "0.8.10", features = ["full",] }
coerce-macros = "0.2.0"

anyhow = "1.0.72"
async-trait = "0.1.72"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
dashmap = "5.5.0"
#delegate = "0.9.0"
either = "1.9.0"
futures = "0.3.28"
iso8601-timestamp = "0.2.11"
lazy-regex = "3.0.1"
maplit = "1.0.2"
once_cell = "1.18.0"
#rand = "0.8.5"
parking_lot = "0.12.1"
pretty-type-name = "1.0.1"
#metrics = "0.20.1"
#metrics-exporter-prometheus = "0.11.0"
#metrics-util = "0.14.0"
#jwt = "0.16.0"
#hmac = "0.12.1"
rand = "0.8.5"
regex = "1.9.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.181", features = ["derive", "rc"] }
serde_json = "1.0.104"
#sha2 = "0.10.6"
smol_str = { version = "0.2.0", features = ["serde"] }
sql_query_builder = { version = "1.1.4", features = ["postgresql"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
strum = "0.25.0"
strum_macros = "0.25.1"
tagid = { git = "https://github.com/dmrolfs/tagid-rs", features = ["envelope"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["full"] }
tracing = { version = "0.1.37", features = ["valuable"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
valuable = { version = "0.1.0", features = ["derive"] }

#axum = { version = "0.6.8", features = ["query"] }
#utoipa = { version = "3.0.3", features = ["axum_extras"] }
#utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }

[dev-dependencies]
coerce-cqrs-test = { path = "../coerce-cqrs-test" }
claim = { git = "https://github.com/dmrolfs/rust-claim", branch = "bump-autocfg-version" }
pretty_assertions = "1.4.0"
serde_test = "1.0.176"
static_assertions = "1.1.0"
tokio-test = "0.4.2"
