[package]
name = "coerce-cqrs"
description = "CQRS structure over coerce-rs persistent actor framework."
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dmrolfs/coerce-cqrs-rs"
keywords = ["actor", "cqrs", "events", "event_sourced"]
categories = ["actor", "event", "cqrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fixed deps to resolve compile/link issues
protobuf = "=3.2.0"

coerce = { version = "0.8.10", features = ["full",] }
coerce-macros = "0.2.0"

anyhow = "1.0.75"
async-trait = "0.1.73"
dashmap = "5.5.3"
either = "1.9.0"
futures = "0.3.28"
heck = "0.4.1"
iso8601-timestamp = "0.2.12"
itertools = "0.11.0"
lazy-regex = "3.0.2"
maplit = "1.0.2"
nutype = { version = "0.3.1", features = ["serde", "regex"] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
pretty-type-name = "1.0.1"
rand = "0.8.5"
regex = "1.9.6"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
smol_str = { version = "0.2.0", features = ["serde"] }
sql_query_builder = { version = "2.0.0", features = ["postgresql"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls"] }
strum = "0.25.0"
strum_macros = "0.25.2"
tagid = { git = "https://github.com/dmrolfs/tagid-rs", features = ["envelope"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9", features = ["full"] }
tracing = { version = "0.1.37", features = ["valuable"] }
tynm = "0.1.9"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
valuable = { version = "0.1.0", features = ["derive"] }

[dev-dependencies]
coerce-cqrs-test = { path = "../coerce-cqrs-test" }
claim = { git = "https://github.com/dmrolfs/rust-claim", branch = "bump-autocfg-version" }
pretty_assertions = "1.4.0"
serde_test = "1.0.176"
static_assertions = "1.1.0"
tokio-test = "0.4.3"
bitcode = "0.4.0"
